kustomize/dashy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dashy
  labels:
    goldilocks.fairwinds.com/enabled: true
