kustomize/dashy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      volumes:
      - name: conf
        configMap:
          name: dashy-config
          items:
            - key: conf.yaml
              path: conf.yml 
      containers:
        - name: dashy
          image: lissy93/dashy:latest
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 500Mi
          startupProbe:
            timeoutSeconds: 10
            httpGet:
              path: /
              port: 80
          livenessProbe:
            httpGet:
              path: /
              port: 80
          command:   
          ports:
            - containerPort: 80
          volumeMounts:
            - name: conf
              mountPath: /app/public/conf.yml
              subPath: conf.yml
