kustomize/dashy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashy
  labels:
    app: dashy
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: dashy
