kustomize/dashy/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dashy-route
spec:
  routes:
    - kind: Rule
      match: Host(`k8s.neurobug.com`)
      services:
        - name: dashy
          port: 80
